# E261

./: .env.example  .gitignore  DEPLOY_NOW.md  Procfile  README.md  RENDER_DEPLOYMENT.md  _config.yml  analyze_wav.global.debug.txt  analyze_wav.py  comprehensive_tts_test.py  final_tts_test.py  index.html  inspect_tts.py  pyproject.toml  quick_test.py  render.yaml  render_clean.yaml  requirements.txt  simple_tts_test.py  start.sh  test_backend.py  test_eleven_local.py  test_tts.py  test_tts_debug.py  tts_fix_test.py  tts_test.html  wake_up_service.py
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
backend/: .env.developmeNt  .env.example  __init__.py  compensation.py  h.py  helpers.py  inspect_wav.py  main_convo.py  requirements.txt  server_api.py  test_eleven.py  zoho_client.py
backend/.venv311/: pyvenv.cfg
backend/.venv311/Scripts/: activate  activate.bat
backend/static/: api_wrapper.js  ff_config.js
voice-intake/src/: IntroVideo.jsx
voice-intake/src/components/: App.jsx
