[tool.poetry]
name = "e261-voice-backend"
version = "0.1.0"
description = "Voice Claims Backend for E261 Claims"
authors = ["E261 Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
pydantic = "2.4.2"
uvicorn = {extras = ["standard"], version = "0.24.0"}
python-multipart = "0.0.6"
requests = "2.31.0"
openai = "1.3.8"
python-dotenv = "1.0.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
